--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,15 @@
-.App {
-  text-align: center;
+#App {
+  /* width: 100%;  */
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgb(248, 248, 248);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.custom-tag {
+  max-width: 90%;
+  margin-top: 5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel-img {
+  width : 100% ;
+  margin-left: 5%;
 }
