--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,6 @@
-#App {
+.App {
   /* width: 100%;  */
+  height: 100vh;
   font-family: 'Montserrat', sans-serif;
   background-color: rgb(248, 248, 248);
-}
-
-.custom-tag {
-  max-width: 90%;
-  margin-top: 5%;
-}
-
-.carousel-img {
-  width : 100% ;
-  margin-left: 5%;
 }
