--- a/src/style/MidHeader.css
+++ b/src/style/MidHeader.css
@@ -8,9 +8,10 @@
 
 .logo {
     align-self: center ;
-    height: 40%;
+    height: 30%;
     margin-top: 3%;
     margin-left: 5%;
+    margin-bottom: 3%;
 }
 
 
