--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,6 +1,7 @@
 #navbar {
     display: grid;
     margin-top: 3%;
+    margin-bottom: 3%;
     /* display: inline-block; */
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr
 }
@@ -27,7 +28,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: rgb(236, 236, 236);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
