--- a/src/style/MidHeader.css
+++ b/src/style/MidHeader.css
@@ -2,7 +2,8 @@
 #mid-header {
     display: grid ;
     margin-top: 2%;
-    grid-template-columns: 3fr 6fr
+    grid-template-columns: 3fr 6fr ;
+    
 }
 
 
