--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -4,6 +4,7 @@
     margin-bottom: 3%;
     /* display: inline-block; */
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr
+    
 }
 
 .navText {
@@ -13,6 +14,7 @@
     text-transform: uppercase;
     line-height: 1.538;
     font-weight: bolder;
+    justify-self: center ;
 }
 
 
