--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   /* width: 100%;  */
   height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Secular One', sans-serif;
+
+  
   background-color: rgb(248, 248, 248);
 }
 
