--- a/src/style/ContactForm.css
+++ b/src/style/ContactForm.css
@@ -18,6 +18,8 @@ input {
 }
 
 ::placeholder {
-    margin: 20%;
-    font-size: 90%
+    margin: 25%;
+    font-size: 100% ;
+    direction: rtl;
+
   }
