--- a/src/style/PT-Branch.css
+++ b/src/style/PT-Branch.css
@@ -4,9 +4,7 @@
     align-content: center;
     margin-top: 3%;
     /* margin-bottom: 3%; */
-
     font-weight: bolder;
-
 }
 
 .button {
@@ -16,8 +14,12 @@
     color: black;
 }
 
-.h4 {
-    font-family: 'Montserrat', sans-serif;
+h2, h3 {
+    justify-self: center;
+}
+
+h4 {
+    /* font-family: 'Montserrat', sans-serif; */
     position: absolute;
     color: rgb(87, 81, 83);
     top: 50%;
