--- a/src/style/Welcome.css
+++ b/src/style/Welcome.css
@@ -23,8 +23,8 @@
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-weight: bolder;
-    font-size: 190%;
+    font-weight: bold;
+    font-size: 220%;
     line-height: 1.2;
 }
 
@@ -35,7 +35,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: bolder;
-    font-size: 190%;
+    font-size: 210%;
     line-height: 1.2;
 }
 
